# mTX

./: CMakeLists.txt  README.md  mTX-docu.md  z_cmd_copy_to_sdcard.bat
SDCARD/: README.md
SDCARD/SCRIPTS/TOOLS/: OlliWTelCfg.lua
SDCARD/WIDGETS/OlliwTel/: main.lua  tautopilot.lua  tcamera.lua  tgimbal.lua  tobject.lua  tutils.lua  tvehicle.lua
lua_telem_script/: README.md  main.lua  taction.lua  tautopilot.lua  tconfig.lua  tdebug.lua  tgimbal.lua  tplay.lua  tutils.lua  tvehicle.lua
radio/src/: CMakeLists.txt  audio.cpp  audio.h  cli.cpp  dataconstants.h  datastructs.h  debug.cpp  gps.cpp  gps.h  keys.cpp  main.cpp  opentx.cpp  opentx.h  options.h  tasks.cpp  tasks.h  trainer.cpp  translations.cpp  translations.h
radio/src/gui/: gui_common.cpp  gui_common.h
radio/src/gui/480x272/: lcd.cpp  menus.h  model_setup.cpp  radio_diaganas.cpp  radio_hardware.cpp  radio_setup.cpp  topbar.cpp
radio/src/lua/: api_general.cpp  api_lcd.cpp  api_mavlink.cpp  api_mavsdk.cpp  api_model.cpp  widgets.cpp
radio/src/mavlink/: gps-nmea.h  gps-ubx.h  gps2.cpp  lua_api_mavlink.cpp  lua_api_mavsdk.cpp  lua_api_mbridge.cpp  m-bridge.cpp  m-bridge.h  mavlink_telem.cpp  mavlink_telem.h  mavlink_telem_autopilot.cpp  mavlink_telem_camera.cpp  mavlink_telem_gcs_and_alike.cpp  mavlink_telem_gimbal.cpp  mavlink_telem_interface.cpp  mavlink_telem_mavapi.cpp  mavlink_telem_qshot.cpp  mbridge.cpp  mbridge.h
radio/src/pulses/: modules_constants.h  modules_helpers.h  pulses.cpp  pulses.h  pxx2.cpp
radio/src/storage/: modelslist.cpp  storage_common.cpp
radio/src/targets/common/arm/stm32/: aux_serial_driver.cpp  rotary_encoder_driver.cpp  usb_driver.cpp  usb_driver.h  usbd_desc.c
radio/src/targets/common/arm/stm32/bootloader/: CMakeLists.txt
radio/src/targets/horus/: CMakeLists.txt  board.cpp  board.h  extmodule_driver.cpp  gps_driver.cpp  hal.h  telemetry_driver.cpp  tp_gt911.cpp
radio/src/telemetry/: crossfire.cpp  crossfire.h  telemetry.cpp  telemetry.h
radio/src/telemetry/mavlink/: mavlink_telem.cpp  mavlink_telem.h  mavlink_telem_autopilot.cpp  mavlink_telem_interface.cpp  mavlink_telem_mavapi.cpp  mavlink_telem_qshot.cpp
radio/src/translations/: untranslated.h
tools/: copy_to_sdcard.bat
